fixed formatting issue on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ a {
 	background-color: #242E35;
 	color: #EEEEE7;
 	margin-right: 10px;
+	font-size: 8pt;
 }
 
 #itemTVShow > li {
